WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262801
[visionOS] Media: fullscreen player controls are not up to spec
https://bugs.webkit.org/show_bug.cgi?id=262801
Summary
[visionOS] Media: fullscreen player controls are not up to spec
Dean Jackson
Reported
2023-10-06 11:39:10 PDT
Media: fullscreen player controls are not up to spec
Attachments
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2023-10-06 11:39:15 PDT
<
rdar://problem/116372898
>
Dean Jackson
Comment 2
2023-10-06 11:41:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18774
EWS
Comment 3
2023-10-06 13:09:51 PDT
Committed
269013@main
(3f98b4e907f5): <
https://commits.webkit.org/269013@main
> Reviewed commits have been landed. Closing PR #18774 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug