[visionOS] Media: fullscreen player controls are not up to spec https://bugs.webkit.org/show_bug.cgi?id=262801 rdar://116372898

Reviewed by Tim Horton.

When visionOS changed its pixels-per-meter value, we forgot
to update the sizes and positions of the fullscreen exit and
related buttons.

* Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenViewController.mm:
(-[WKFullScreenViewController loadView]): Adjust some constants.

Canonical link: https://commits.webkit.org/269013@main